Oanda data test

--- a/src/OandaTest.ipynb
+++ b/src/OandaTest.ipynb
@@ -2,27 +2,337 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'OANDA_ACCESS_TOKEN'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-0ed490f9df03>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menviron\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'OANDA_ACCESS_TOKEN'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/usr/local/lib/python3.8/os.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    673\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    674\u001b[0m             \u001b[0;31m# raise KeyError with the original key value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 675\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    676\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecodevalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    677\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'OANDA_ACCESS_TOKEN'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2156.379\n",
+      "1 2156.149\n",
+      "2 2155.459\n",
+      "3 2155.037\n",
+      "4 2154.568\n",
+      "5 2154.0170000000003\n",
+      "6 2153.5150000000003\n",
+      "7 2153.423\n",
+      "8 2153.3469999999998\n",
+      "9 2152.007\n",
+      "10 2151.132\n",
+      "11 2150.366\n",
+      "12 2148.819\n",
+      "13 2149.1189999999997\n",
+      "14 2149.41\n",
+      "15 2149.783\n",
+      "16 2151.3810000000003\n",
+      "17 2152.56\n",
+      "18 2152.354\n",
+      "19 2152.3920000000003\n",
+      "20 2151.927\n",
+      "21 2152.27\n",
+      "22 2153.106\n",
+      "23 2152.1789999999996\n",
+      "24 2152.8520000000003\n",
+      "25 2151.46\n",
+      "26 2151.347\n",
+      "27 2151.42\n",
+      "28 2151.1000000000004\n",
+      "29 2151.7299999999996\n",
+      "30 2152.1850000000004\n",
+      "31 2151.8550000000005\n",
+      "32 2151.0429999999997\n",
+      "33 2150.534\n",
+      "34 2150.7670000000003\n",
+      "35 2150.238\n",
+      "36 2149.515\n",
+      "37 2150.213\n",
+      "38 2150.937\n",
+      "39 2151.4839999999995\n",
+      "40 2151.1\n",
+      "41 2150.462\n",
+      "42 2149.995\n",
+      "43 2150.0860000000002\n",
+      "44 2150.203\n",
+      "45 2149.638\n",
+      "46 2149.786\n",
+      "47 2148.6440000000002\n",
+      "48 2148.635\n",
+      "49 2150.0879999999997\n",
+      "50 2151.69\n",
+      "51 2151.3390000000004\n",
+      "52 2150.087\n",
+      "53 2149.9030000000002\n",
+      "54 2149.2929999999997\n",
+      "55 2149.8160000000003\n",
+      "56 2149.801\n",
+      "57 2149.83\n",
+      "58 2150.3740000000003\n",
+      "59 2150.8039999999996\n",
+      "60 2150.8309999999997\n",
+      "61 2150.0840000000003\n",
+      "62 2149.9150000000004\n",
+      "63 2150.5330000000004\n",
+      "64 2150.441\n",
+      "65 2150.911\n",
+      "66 2150.851\n",
+      "67 2151.0579999999995\n",
+      "68 2150.5119999999997\n",
+      "69 2150.151\n",
+      "70 2150.568\n",
+      "71 2150.6459999999997\n",
+      "72 2150.553\n",
+      "73 2151.1299999999997\n",
+      "74 2153.672\n",
+      "75 2153.9100000000003\n",
+      "76 2153.37\n",
+      "77 2153.998\n",
+      "78 2154.037\n",
+      "79 2154.2569999999996\n",
+      "80 2155.066\n",
+      "81 2155.8570000000004\n",
+      "82 2155.9879999999994\n",
+      "83 2157.2649999999994\n",
+      "84 2157.1710000000003\n",
+      "85 2157.42\n",
+      "86 2157.7690000000002\n",
+      "87 2156.4550000000004\n",
+      "88 2155.669\n",
+      "89 2155.3140000000003\n",
+      "90 2155.082\n",
+      "91 2155.2219999999998\n",
+      "92 2156.4570000000003\n",
+      "93 2155.955\n",
+      "94 2156.114\n",
+      "95 2154.7810000000004\n",
+      "96 2154.486\n",
+      "97 2154.6979999999994\n",
+      "98 2154.2690000000002\n",
+      "99 2153.421\n",
+      "100 2153.3460000000005\n",
+      "101 2153.9979999999996\n",
+      "102 2153.638\n",
+      "103 2154.0469999999996\n",
+      "104 2154.0779999999995\n",
+      "105 2154.305\n",
+      "106 2154.741\n",
+      "107 2155.715\n",
+      "108 2155.8570000000004\n",
+      "109 2154.745\n",
+      "110 2154.445\n",
+      "111 2154.594\n",
+      "112 2154.7400000000007\n",
+      "113 2155.0550000000003\n",
+      "114 2155.1749999999997\n",
+      "115 2155.0489999999995\n",
+      "116 2155.612\n",
+      "117 2157.031\n",
+      "118 2156.6690000000003\n",
+      "119 2156.9130000000005\n",
+      "120 2156.8140000000003\n",
+      "121 2156.0979999999995\n",
+      "122 2155.6409999999996\n",
+      "123 2156.1150000000002\n",
+      "124 2156.888\n",
+      "125 2157.211\n",
+      "126 2156.8080000000004\n",
+      "127 2156.6230000000005\n",
+      "128 2156.267\n",
+      "129 2155.621\n",
+      "130 2156.0\n",
+      "131 2156.45\n",
+      "132 2156.5460000000003\n",
+      "133 2156.7019999999998\n",
+      "134 2157.0030000000006\n",
+      "135 2157.353\n",
+      "136 2156.75\n",
+      "137 2156.3709999999996\n",
+      "138 2156.141\n",
+      "139 2156.84\n",
+      "140 2156.7929999999997\n",
+      "141 2156.5719999999997\n",
+      "142 2156.592\n",
+      "143 2156.6839999999997\n",
+      "144 2155.469\n",
+      "145 2154.34\n",
+      "146 2154.489\n",
+      "147 2154.924\n",
+      "148 2155.157\n",
+      "149 2155.3250000000003\n",
+      "150 2155.079\n",
+      "151 2154.713\n",
+      "152 2154.871\n",
+      "153 2154.719\n",
+      "154 2155.6699999999996\n",
+      "155 2155.607\n",
+      "156 2154.8070000000002\n",
+      "157 2154.4219999999996\n",
+      "158 2154.867\n",
+      "159 2154.7670000000003\n",
+      "160 2153.783\n",
+      "161 2153.139\n",
+      "162 2152.811\n",
+      "163 2153.308\n",
+      "164 2153.3990000000003\n",
+      "165 2152.858\n",
+      "166 2152.6220000000003\n",
+      "167 2153.0229999999997\n",
+      "168 2152.9089999999997\n",
+      "169 2153.402\n",
+      "170 2153.28\n",
+      "171 2153.5519999999997\n",
+      "172 2153.895\n",
+      "173 2153.166\n",
+      "174 2152.5120000000006\n",
+      "175 2152.639\n",
+      "176 2152.5779999999995\n",
+      "177 2152.243\n",
+      "178 2152.2639999999997\n",
+      "179 2152.2349999999997\n",
+      "180 2152.638\n",
+      "181 2153.243\n",
+      "182 2153.7889999999998\n",
+      "183 2153.4049999999997\n",
+      "184 2154.106\n",
+      "185 2153.84\n",
+      "186 2153.1\n",
+      "187 2152.8329999999996\n",
+      "188 2152.824\n",
+      "189 2151.0970000000007\n",
+      "190 2149.5519999999997\n",
+      "191 2149.363\n",
+      "192 2148.616\n",
+      "193 2148.071\n",
+      "194 2148.471\n",
+      "195 2148.2880000000005\n",
+      "196 2147.866\n",
+      "197 2148.142\n",
+      "198 2147.9220000000005\n",
+      "199 2147.1000000000004\n",
+      "200 2145.751\n",
+      "201 2144.3660000000004\n",
+      "202 2143.759\n",
+      "203 2143.8509999999997\n",
+      "204 2142.6000000000004\n",
+      "205 2142.717\n",
+      "206 2143.6150000000002\n",
+      "207 2143.665\n",
+      "208 2142.9269999999997\n",
+      "209 2143.7780000000002\n",
+      "210 2144.131\n",
+      "211 2143.693\n",
+      "212 2145.4529999999995\n",
+      "213 2145.3489999999997\n",
+      "214 2144.379\n",
+      "215 2144.5110000000004\n",
+      "216 2144.296\n",
+      "217 2143.1830000000004\n",
+      "218 2143.3390000000004\n",
+      "219 2144.175\n",
+      "220 2144.674\n",
+      "221 2143.965\n",
+      "222 2143.249\n",
+      "223 2142.382\n",
+      "224 2142.723\n",
+      "225 2143.383\n",
+      "226 2145.857\n",
+      "227 2147.466\n",
+      "228 2150.3399999999997\n",
+      "229 2150.68\n",
+      "230 2151.968\n",
+      "231 2153.6050000000005\n",
+      "232 2155.4179999999997\n",
+      "233 2154.403\n",
+      "234 2155.5139999999997\n",
+      "235 2155.944\n",
+      "236 2156.457\n",
+      "237 2155.983\n",
+      "238 2156.5809999999997\n",
+      "239 2157.272\n",
+      "240 2157.0710000000004\n",
+      "241 2157.249\n",
+      "242 2156.805\n",
+      "243 2155.778\n",
+      "244 2155.8230000000003\n",
+      "245 2155.849\n",
+      "246 2155.881\n",
+      "247 2156.453\n",
+      "248 2157.365\n",
+      "249 2156.214\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "\n",
-    "print(os.environ['OANDA_ACCESS_TOKEN'])"
+    "from oandapyV20 import API\n",
+    "import oandapyV20.endpoints.instruments as instruments\n",
+    "import pandas as pd\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# APIの設定\n",
+    "accountID = \"000-000-0000000-000\"\n",
+    "\n",
+    "api = API(access_token=os.environ['OANDA_ACCESS_TOKEN'])\n",
+    "\n",
+    "average_count = 20\n",
+    "data_count = 5000\n",
+    "\n",
+    "num_count = int(data_count / average_count)\n",
+    "\n",
+    "# 5分間隔で5000データ\n",
+    "params = {\n",
+    "    \"count\": data_count,\n",
+    "    \"granularity\": \"M1\"\n",
+    "}\n",
+    "\n",
+    "# APIへ過去データをリクエスト\n",
+    "r = instruments.InstrumentsCandles(instrument=\"USD_JPY\", params=params)\n",
+    "api.request(r)\n",
+    "\n",
+    "# row_dataとしてリストへ変換\n",
+    "row_data = []\n",
+    "\n",
+    "# 全リスト取得\n",
+    "# for raw in r.response['candles']:\n",
+    "#   row_data.append([raw['time'], raw['volume'], raw['mid']['o'], raw['mid']['h'], raw['mid']['l'], raw['mid']['c']])\n",
+    "    \n",
+    "# 時間と 終値だけ\n",
+    "for raw in r.response['candles']:\n",
+    "  row_data.append([raw['time'], raw['mid']['c']])\n",
+    "    \n",
+    "\n",
+    "df = pd.DataFrame(row_data)\n",
+    "# df.columns = ['time', 'volume', 'open', 'high', 'low', 'close']\n",
+    "df.columns = ['time',  'close']\n",
+    "df = df.set_index('time')    \n",
+    "\n",
+    "df.index = pd.to_datetime(df.index)\n",
+    "# print(df)\n",
+    "\n",
+    "# print(r.response['candles'])\n",
+    "\n",
+    "\n",
+    "for i in range(num_count):\n",
+    "  cn = 0.0\n",
+    "\n",
+    "  for j in range(average_count):\n",
+    "    cn = cn + float(row_data[i * 20 + j][1])\n",
+    "  \n",
+    "  print(i, cn)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
