--- a/src/OandaTest.ipynb
+++ b/src/OandaTest.ipynb
@@ -2,263 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 107.44805000000001\n",
-      "1 107.55609999999999\n",
-      "2 107.58220000000001\n",
-      "3 107.53599999999999\n",
-      "4 107.50545\n",
-      "5 107.47515000000001\n",
-      "6 107.47275000000002\n",
-      "7 107.50134999999997\n",
-      "8 107.47720000000001\n",
-      "9 107.50795000000001\n",
-      "10 107.53010000000002\n",
-      "11 107.54535000000003\n",
-      "12 107.52915\n",
-      "13 107.48500000000001\n",
-      "14 107.51785000000002\n",
-      "15 107.5228\n",
-      "16 107.5273\n",
-      "17 107.54464999999998\n",
-      "18 107.5538\n",
-      "19 107.54544999999999\n",
-      "20 107.50549999999998\n",
-      "21 107.51905000000002\n",
-      "22 107.52984999999998\n",
-      "23 107.53584999999998\n",
-      "24 107.5202\n",
-      "25 107.62714999999999\n",
-      "26 107.68990000000001\n",
-      "27 107.68245000000002\n",
-      "28 107.68114999999997\n",
-      "29 107.70505\n",
-      "30 107.7117\n",
-      "31 107.72585\n",
-      "32 107.76664999999998\n",
-      "33 107.79665\n",
-      "34 107.83009999999999\n",
-      "35 107.86659999999998\n",
-      "36 107.85579999999996\n",
-      "37 107.8937\n",
-      "38 107.84280000000001\n",
-      "39 107.8252\n",
-      "40 107.76520000000001\n",
-      "41 107.75725000000003\n",
-      "42 107.7412\n",
-      "43 107.81344999999999\n",
-      "44 107.79794999999997\n",
-      "45 107.81474999999998\n",
-      "46 107.76870000000001\n",
-      "47 107.73665000000001\n",
-      "48 107.72390000000003\n",
-      "49 107.72919999999999\n",
-      "50 107.69700000000003\n",
-      "51 107.65845000000002\n",
-      "52 107.68564999999998\n",
-      "53 107.69295\n",
-      "54 107.69060000000002\n",
-      "55 107.70349999999999\n",
-      "56 107.71259999999998\n",
-      "57 107.71105\n",
-      "58 107.76519999999998\n",
-      "59 107.79434999999998\n",
-      "60 107.77495000000002\n",
-      "61 107.72459999999998\n",
-      "62 107.71995\n",
-      "63 107.73640000000003\n",
-      "64 107.73760000000001\n",
-      "65 107.7642\n",
-      "66 107.75504999999998\n",
-      "67 107.7533\n",
-      "68 107.81265\n",
-      "69 107.85350000000001\n",
-      "70 107.8385\n",
-      "71 107.84854999999997\n",
-      "72 107.8144\n",
-      "73 107.80345\n",
-      "74 107.78479999999999\n",
-      "75 107.82925\n",
-      "76 107.84985000000002\n",
-      "77 107.85100000000003\n",
-      "78 107.84035000000002\n",
-      "79 107.82540000000002\n",
-      "80 107.79354999999995\n",
-      "81 107.7838\n",
-      "82 107.81755000000001\n",
-      "83 107.82415\n",
-      "84 107.82745000000003\n",
-      "85 107.84609999999998\n",
-      "86 107.8581\n",
-      "87 107.85749999999999\n",
-      "88 107.82610000000003\n",
-      "89 107.81219999999999\n",
-      "90 107.8232\n",
-      "91 107.8395\n",
-      "92 107.82894999999999\n",
-      "93 107.83365\n",
-      "94 107.83339999999998\n",
-      "95 107.81269999999999\n",
-      "96 107.74250000000002\n",
-      "97 107.71865\n",
-      "98 107.73125000000002\n",
-      "99 107.75235\n",
-      "100 107.76049999999998\n",
-      "101 107.7674\n",
-      "102 107.7482\n",
-      "103 107.72995\n",
-      "104 107.74150000000002\n",
-      "105 107.75305\n",
-      "106 107.79195\n",
-      "107 107.76164999999999\n",
-      "108 107.72985000000003\n",
-      "109 107.7325\n",
-      "110 107.751\n",
-      "111 107.70645000000002\n",
-      "112 107.67835\n",
-      "113 107.64939999999999\n",
-      "114 107.63969999999999\n",
-      "115 107.67355\n",
-      "116 107.66515000000001\n",
-      "117 107.62854999999999\n",
-      "118 107.64730000000002\n",
-      "119 107.63845\n",
-      "120 107.65945000000002\n",
-      "121 107.66975000000002\n",
-      "122 107.66164999999998\n",
-      "123 107.69469999999998\n",
-      "124 107.68225000000002\n",
-      "125 107.6387\n",
-      "126 107.62505000000002\n",
-      "127 107.63669999999999\n",
-      "128 107.6223\n",
-      "129 107.60704999999999\n",
-      "130 107.60620000000002\n",
-      "131 107.63314999999997\n",
-      "132 107.6301\n",
-      "133 107.68699999999998\n",
-      "134 107.67704999999998\n",
-      "135 107.68679999999998\n",
-      "136 107.70189999999998\n",
-      "137 107.67869999999998\n",
-      "138 107.63739999999999\n",
-      "139 107.65214999999998\n",
-      "140 107.62225000000001\n",
-      "141 107.49994999999998\n",
-      "142 107.47035000000001\n",
-      "143 107.45735000000002\n",
-      "144 107.4132\n",
-      "145 107.40805\n",
-      "146 107.42360000000001\n",
-      "147 107.40230000000004\n",
-      "148 107.39985000000001\n",
-      "149 107.40525\n",
-      "150 107.3904\n",
-      "151 107.31454999999998\n",
-      "152 107.27299999999998\n",
-      "153 107.17224999999999\n",
-      "154 107.19955\n",
-      "155 107.17350000000002\n",
-      "156 107.11859999999999\n",
-      "157 107.15060000000001\n",
-      "158 107.19765\n",
-      "159 107.15194999999999\n",
-      "160 107.1757\n",
-      "161 107.19434999999999\n",
-      "162 107.20145\n",
-      "163 107.20985\n",
-      "164 107.28865\n",
-      "165 107.24034999999999\n",
-      "166 107.21870000000001\n",
-      "167 107.22440000000002\n",
-      "168 107.19489999999999\n",
-      "169 107.15725\n",
-      "170 107.18319999999999\n",
-      "171 107.22104999999999\n",
-      "172 107.2198\n",
-      "173 107.18634999999999\n",
-      "174 107.1428\n",
-      "175 107.11364999999998\n",
-      "176 107.15794999999999\n",
-      "177 107.20695000000003\n",
-      "178 107.34255\n",
-      "179 107.41595\n",
-      "180 107.5685\n",
-      "181 107.5379\n",
-      "182 107.63609999999998\n",
-      "183 107.72000000000003\n",
-      "184 107.75520000000002\n",
-      "185 107.74410000000003\n",
-      "186 107.78830000000002\n",
-      "187 107.80170000000001\n",
-      "188 107.8194\n",
-      "189 107.80950000000003\n",
-      "190 107.84965\n",
-      "191 107.85785000000003\n",
-      "192 107.8566\n",
-      "193 107.85315\n",
-      "194 107.81235000000001\n",
-      "195 107.78880000000001\n",
-      "196 107.80045\n",
-      "197 107.7823\n",
-      "198 107.81104999999998\n",
-      "199 107.83975000000001\n",
-      "200 107.86039999999998\n",
-      "201 107.76055000000001\n",
-      "202 107.75285000000001\n",
-      "203 107.77645\n",
-      "204 107.73155000000001\n",
-      "205 107.68195\n",
-      "206 107.67704999999998\n",
-      "207 107.72990000000001\n",
-      "208 107.8309\n",
-      "209 107.81269999999999\n",
-      "210 107.7456\n",
-      "211 107.73639999999997\n",
-      "212 107.67125000000001\n",
-      "213 107.69739999999999\n",
-      "214 107.69500000000001\n",
-      "215 107.67610000000002\n",
-      "216 107.67170000000002\n",
-      "217 107.65110000000001\n",
-      "218 107.64944999999997\n",
-      "219 107.64269999999999\n",
-      "220 107.64155000000001\n",
-      "221 107.6267\n",
-      "222 107.55040000000001\n",
-      "223 107.55274999999999\n",
-      "224 107.53810000000001\n",
-      "225 107.54865000000002\n",
-      "226 107.5115\n",
-      "227 107.57265\n",
-      "228 107.61479999999999\n",
-      "229 107.59259999999999\n",
-      "230 107.5488\n",
-      "231 107.5071\n",
-      "232 107.43320000000001\n",
-      "233 107.4502\n",
-      "234 107.4274\n",
-      "235 107.48585\n",
-      "236 107.57265\n",
-      "237 107.61575000000002\n",
-      "238 107.68260000000001\n",
-      "239 107.6769\n",
-      "240 107.71690000000001\n",
-      "241 107.74510000000001\n",
-      "242 107.7479\n",
-      "243 107.72449999999999\n",
-      "244 107.68904999999998\n",
-      "245 107.7\n",
-      "246 107.70900000000002\n",
-      "247 107.73055000000002\n",
-      "248 107.72325000000001\n",
-      "249 107.67800000000003\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid character in identifier (<ipython-input-3-ac6888e8e450>, line 46)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-ac6888e8e450>\"\u001b[0;36m, line \u001b[0;32m46\u001b[0m\n\u001b[0;31m    candlestick_ohlc(ax, zip(mdates.date2num(df.index), df['Open'], df['High'], df['Low'], df['Close']), width=0.４)\u001b[0m\n\u001b[0m                                                                                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
      ]
     }
    ],
@@ -270,6 +22,9 @@
     "import pandas as pd\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandas_datareader as pdr\n",
+    "from mpl_finance import candlestick_ohlc\n",
+    "\n",
     "\n",
     "# APIの設定\n",
     "accountID = \"000-000-0000000-000\"\n",
@@ -294,39 +49,24 @@
     "# row_dataとしてリストへ変換\n",
     "row_data = []\n",
     "\n",
+    "columns = ['time', 'volume', 'open_value', 'high_value', 'low_value', 'close_value']\n",
+    "\n",
     "# 全リスト取得\n",
-    "# for raw in r.response['candles']:\n",
-    "#   row_data.append([raw['time'], raw['volume'], raw['mid']['o'], raw['mid']['h'], raw['mid']['l'], raw['mid']['c']])\n",
-    "    \n",
-    "# 時間と 終値だけ\n",
     "for raw in r.response['candles']:\n",
-    "  row_data.append([raw['time'], raw['mid']['c']])\n",
-    "    \n",
+    "  row_data.append([raw['time'], raw['volume'], raw['mid']['o'], raw['mid']['h'], raw['mid']['l'], raw['mid']['c']])\n",
     "\n",
-    "df = pd.DataFrame(row_data)\n",
-    "# df.columns = ['time', 'volume', 'open', 'high', 'low', 'close']\n",
-    "df.columns = ['time',  'close']\n",
-    "df = df.set_index('time')    \n",
+    "# df = pd.DataFrame(data=row_data, columns=columns)\n",
     "\n",
-    "df.index = pd.to_datetime(df.index)\n",
-    "# print(df)\n",
+    "df = pdr.get_data_yahoo('AAPL', '2019-08-16', '2019-09-19')\n",
+    "ax = plt.subplot()\n",
+    "ax.xaxis.set_major_formatter(mdates.DateFormatter('%m/%d'))\n",
+    "candlestick_ohlc(ax, zip(mdates.date2num(df.index), df['Open'], df['High'], df['Low'], df['Close']), width=0.４)\n",
+    "plt.title('apple')\n",
+    "# plt.savefig('stock.png')\n",
     "\n",
-    "# print(r.response['candles'])\n",
+    "print(\"plt\")\n",
     "\n",
-    "data=[]\n",
-    "for i in range(num_count):\n",
-    "  cn = 0.0\n",
-    "\n",
-    "  for j in range(average_count):\n",
-    "    cn = cn + float(row_data[i * 20 + j][1])\n",
-    "    \n",
-    "   data.append(cn/average_count)\n",
-    "  \n",
-    "  print(i, cn/average_count)\n",
-    "\n",
-    "df.plot( y=['ad', 'ba', 'ef'], figsize=(16,4), alpha=0.5)\n",
-    "    \n",
-    "    "
+    "plt.show()"
    ]
   },
   {
